k8s/apps/network/envoy-gateway/gateways/external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  labels:
    gateway: external
spec:
  gatewayClassName: envoy-gateway
  allowedListeners:
    namespaces:
      from: Same
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: "external.cbannister.xyz,external.rociobolanos.com"
      io.cilium/lb-ipam-ips: 10.45.0.11
    labels:
      gateway: external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
