k8s/apps/network/envoy-gateway/gateways/internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  labels:
    gateway: internal
spec:
  gatewayClassName: envoy-gateway
  allowedListeners:
    namespaces:
      from: Same
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: "internal.cbannister.xyz,internal.rociobolanos.com"
      io.cilium/lb-ipam-ips: 10.45.0.10
    labels:
      gateway: internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: All
