k8s/apps/network/envoy-gateway/gateways/redirect.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect-internal
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
    - name: internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 3
    retryOn:
      triggers:
        - reset-before-request
        - connect-failure
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
