k8s/apps/network/envoy-gateway/gateways/rociobolanos-apex.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rociobolanos-apex-redirect
  namespace: network
spec:
  hostnames:
    - rociobolanos.com
  parentRefs:
    - name: internal-rociobolanos-com-apex
      namespace: network
      kind: ListenerSet
      sectionName: https
    - name: internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: www.rociobolanos.com
            port: 443
            statusCode: 301
